# LLM-Json-Ingestion

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
scripts/: replay_dlq.py  seed_webhooks.sh
scripts/sample_payloads/: acme_invoice.json  fedex_delivered.json  fedex_exception.json  maersk_shipment.json  unclassified.json
src/: app.py  config.py  db.py  dedup.py  event_types.py  queue.py  rate_limit.py  registry.py  vendors.py  worker.py
src/llm/: __init__.py  base.py  mock.py  openai_client.py  prompts.py
src/models/: __init__.py  dead_letter.py  invoice.py  raw_event.py  seen_key.py  shipment.py  vendor_counter.py
src/schemas/: __init__.py  invoice.py  shipment.py
tests/: conftest.py  test_dedup.py  test_integration_ingest.py  test_mock_llm.py  test_rate_limit.py  test_registry.py  test_schemas.py  test_vendor.py  test_worker_pipeline.py
